# worldcup-predictor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
Rules of the game/: FIF8A World Cup 2026_Player_template.xlsx  RULES_AND_SCORING.md
data/: MANIFEST.yml
docs/: index.html  knockout_predictions.json  live_group_tables.csv  mobile_dashboard_data.json  played_matches.csv  remaining_matches.csv  scoring_summary.csv
scripts/: analyse_country_residuals.py  apply_score_comment.py  apply_scores_batch_update.py  apply_wc2026_squad_overlay.py  audit_bracket_mapping_inputs_claude.py  audit_bracket_structure.py  audit_draw_selection.py  audit_group_stage_predictions.py  audit_player_coach_data.py  build_coach_features.py  build_country_context_features.py  build_country_context_residual_audit.py  build_data_inventory_overview.py  build_fif8a_template.py  build_fill_only_scores.py  build_final_submission_pack.py  build_group_incentive_features.py  build_group_standings_from_auto_scores.py  build_historical_coach_features.py  build_historical_squad_features.py  build_historical_world_cup_squads.py  build_knockout_predictions.py  build_matches_clean.py  build_matches_with_ratings.py  build_mobile_dashboard.py  build_model_matrix_baseline.py  build_model_matrix_country_context.py  build_model_matrix_plus.py  build_model_matrix_squad_compatible.py  build_objective_residual_candidate.py  build_recent_rollforward_candidate.py  build_scoring_report.py  build_squad_features.py  build_submission_pack.py  build_team_name_mapping.py  build_wc2026_squad_features.py  (+31 more)
(+199 files in other folders)
